--- a/app/assets/stylesheets/base/hacks.css.scss
+++ b/app/assets/stylesheets/base/hacks.css.scss
@@ -437,3 +437,10 @@ fieldset[disabled] .twitter-typeahead .tt-input {
 .tt-dropdown-menu .tt-suggestion p {
   margin: 0;
 }
+
+/* Unicorn cursor! Class should be applied to body. */
+.unicorn-cursor {
+  &, a, a:hover {
+    cursor: url('/public/unicorn.gif'), auto;
+  }
+}
