--- a/app/views/layouts/redesign.html.haml
+++ b/app/views/layouts/redesign.html.haml
@@ -25,7 +25,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
 
-  %body
+  %body.unicorn-cursor
     %noscript
       %nav.navbar.navbar-inverse.hb-nav.navbar-fixed-top
         %div.container
