Fix broken app link in header

--- a/app/assets/javascripts/templates/header.hbs
+++ b/app/assets/javascripts/templates/header.hbs
@@ -52,7 +52,7 @@
         </ul>
       </li>
       <li class='dropdown'>
-        <a class='dropdown-toggle' data-toggle='dropdown'>
+        <a href="http://www.hummingbird.me/apps">
           Apps
         </a>
       </li>
