--- a/app/assets/javascripts/templates/header.hbs
+++ b/app/assets/javascripts/templates/header.hbs
@@ -52,9 +52,7 @@
         </ul>
       </li>
       <li class='dropdown'>
-        <a href="http://www.hummingbird.me/apps">
-          Apps
-        </a>
+        {{#link-to 'apps'}}Apps{{/link-to}}
       </li>
     </ul>
 
