Fixed links in app header

--- a/app/assets/javascripts/templates/apps.hbs
+++ b/app/assets/javascripts/templates/apps.hbs
@@ -1,8 +1,8 @@
 <div class="apps-header">
   <div class="container">
     <h1>Applications</h1>
-    <p>The Hummingbird developer community is incredibly talented <br> and has created a variety of useful apps with <a href="#">our API.</a></p>
-    <p>Are you a developer? <a href="#">We’re open-source!</a></p>
+    <p>The Hummingbird developer community is incredibly talented <br> and has created a variety of useful apps with <a href="https://github.com/hummingbird-me/hummingbird/wiki/API-Reference">our API.</a></p>
+    <p>Are you a developer? <a href="https://github.com/hummingbird-me/hummingbird">We’re open-source!</a></p>
   </div>
 </div>
 <div class="apps-page">
