Added placeholder for empty anime nonmal

--- a/app/assets/javascripts/templates/kotodama.hbs
+++ b/app/assets/javascripts/templates/kotodama.hbs
@@ -84,6 +84,8 @@
           <h5>Anime without MAL ID</h5>
           {{#each nonMalAnime}}
             [anime title]
+          {{else}}
+            Nothing found.
           {{/each}}
         </div>
       </div>
