--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -1,6 +1,13 @@
+<filter id="blur">
+  <feGaussianBlur stdDeviation="3"/>
+</filter>
 <div class="user-cover">
-  <div class="cover-photo" {{bind-attr style=coverImageStyle}}></div>
-  <div class="cover-overlay"></div>
+  <div class="cover-photo" {{bind-attr style=coverImageStyle}}>
+    <div class="cover-overlay-wrapper">
+      <div class="dark-overlay"></div>
+      <div class="cover-overlay" {{bind-attr style=coverImageStyle}}></div>
+    </div>
+  </div>
 </div>
 
 <div class="container relative">
@@ -17,7 +24,10 @@
         </div>
         <div class="col-sm-12 col-md-10 account-info">
           <h1 class="username"> {{username}}</h1>
-          <ul class="inline-list clearfix">
+          <p class="user-bio">
+            {{user.miniBio}}
+          </p>
+          {{!-- <ul class="inline-list clearfix">
             {{#if viewingSelf}}
               <li>
                 <label for="cover-image">
@@ -45,7 +55,7 @@
                 {{/bootstrap-tooltip}}
               </li>
             {{/if}}
-          </ul>
+          </ul> --}}
         </div>
       </div>
       {{#if viewingSelf}}
