Fix settings page and launch it

--- a/app/assets/javascripts/templates/header/avatar.hbs
+++ b/app/assets/javascripts/templates/header/avatar.hbs
@@ -4,7 +4,7 @@
   </a>
   <ul class="dropdown-menu right-nav-section">
     <li>{{#link-to 'user' currentUser.id}}<i class="fa fa-paper-plane"></i> View Profile{{/link-to}}</li>
-    <li><a href="/users/edit"><i class="fa fa-cog"></i> Account Settings</a></li>
+    <li><a href="/settings"><i class="fa fa-cog"></i> Account Settings</a></li>
     {{#if currentUser.isAdmin}}
       <li><a href="/kotodama"><i class="fa fa-rebel"></i> Kotodama</a></li>
     {{/if}}
