--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -41,9 +41,13 @@
             </li>
             <li>
               {{#if viewingSelf}}
-                <button class="btn btn-default btn-lg follow-button" {{action "toggleFollow" this}}>
-                  <i class="fa fa-pencil"></i> Edit
-                </button>
+                {{#if showEditMenu}}
+                  theEditMenuHere
+                {{else}}
+                  <button class="btn btn-default btn-lg follow-button" {{action "toggleEditMenu" this}}>
+                    <i class="fa fa-pencil"></i> Edit
+                  </button>
+                {{/if}}
               {{else}}
                 {{#if isFollowed}}
                   <button class="btn btn-default btn-lg follow-button unfollow" {{action "toggleFollow" this}}>
