Move save to separate function

--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -64,7 +64,7 @@
             <li>
               {{#if viewingSelf}}
                 {{#if showEditMenu}}
-                  <button class="btn btn-default btn-lg follow-button save" {{action 'toggleEditMenu'}}>
+                  <button class="btn btn-default btn-lg follow-button save" {{action 'saveEditMenu'}}>
                     <i class="fa fa-pencil"></i> Save
                   </button>
                 {{else}}
