Show cover dimensions

--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -6,7 +6,7 @@
     {{#if viewingSelf}}
       <div class="edit-cover">
         <label for="cover-image">
-          <i class="fa fa-camera"></i> Edit Cover
+          <i class="fa fa-camera"></i> Edit Cover (1440w x 360h)
         </label>
         {{view HB.FileUpload action="coverSelected"
                              id="cover-image"}}
