--- a/app/assets/javascripts/templates/chat.hbs
+++ b/app/assets/javascripts/templates/chat.hbs
@@ -20,7 +20,7 @@
     <div class="chat-items">
       <ul>
         {{#each msg in this itemViewClass="chatMessage"}}
-          <li {{bind-attr class=msg.classes}}>
+          <li {{bind-attr class=msg.type}}>
             <div {{bind-attr class=":username msg.admin"}} {{action "replyUser" msg.username}}>
               {{msg.username}}
               {{#if msg.admin}}
