Add admin shields to sidebar on chat

--- a/app/assets/javascripts/templates/chat.hbs
+++ b/app/assets/javascripts/templates/chat.hbs
@@ -10,6 +10,9 @@
           {{#link-to 'user' username}}
             <img {{bind-attr src=avatar}}>
             {{username}}
+            {{#if admin}}
+              <i class="fa fa-shield" title="This user is an admin" alt="This user is an admin"></i>
+            {{/if}}
           {{/link-to}}
         </li>
       {{/each}}
