I forgot to remove border for the "Send" button

--- a/app/assets/stylesheets/partials/chat.css.scss
+++ b/app/assets/stylesheets/partials/chat.css.scss
@@ -171,6 +171,7 @@
         width: 10%;
         height: 100%;
         border-radius: 0;
+        border: none;
         background-color: #4B5360;
         color: #AAAAAB;
         font-size: 16px;
